# icfpc2016

./: icfpc.org
solutions/proto/: LICENSE  default.nix  proto.cabal
source/: Visualizer.nb  primeVisualizer.nb  test
source/estimator/: nn.py
source/origami/: default.nix  origami.cabal  shell.nix
source/origami/convex-hull/: ConvexHull.hs  Main.hs
source/origami/get-problems/: Main.hs
source/origami/paper-folding/: Main.hs  PaperFolding.hs
source/origami/src/: #Types.hs#  .#Types.hs  API.hs  ConvexHull.hs  Convexize.hs  Emit.hs  Main.hs  Math.hs  Parser.hs  RotatingCalipers.hs  Types.hs
source/origami/visualize/: Main.hs
source/origami/wa-convert/: Main.hs  WolframAlpha.hs
source/proto/: ChangeLog.md
