name:                origami
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/origami#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
  exposed-modules:     Types
                     , Parser
                     , API
  ghc-options:         -Wall
  default-extensions:  OverloadedStrings
  build-depends: base >= 4.7 && < 5
               , attoparsec
               , linear
               , servant
               , servant-client

executable wa-convert
  hs-source-dirs:      wa-convert
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall
  default-extensions:  OverloadedStrings
  build-depends: base >= 4.7 && < 5
               , origami
               , attoparsec
               , linear
               , text

executable convex-hull
  hs-source-dirs:      convex-hull
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall
  default-extensions:  OverloadedStrings
  build-depends: base >= 4.7 && < 5
               , linear >= 1.20.5
               , origami
               , random

executable visualize
  hs-source-dirs:      visualize
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall
  build-depends: base >= 4.7 && < 5
               , origami
               , gloss