name:                origami
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/origami#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
  exposed-modules:     Types
                     , Math
                     , API
                     , Parser
                     , Emit
                     , ConvexHull
                     , Convexize
  ghc-options:         -Wall
  default-extensions:  OverloadedStrings
                     , DataKinds
                     , TypeOperators
                     , MultiParamTypeClasses
                     , DeriveGeneric
                     , FlexibleContexts
                     , FlexibleInstances
                     , FlexibleInstances
                     , GeneralizedNewtypeDeriving
                     , DeriveFunctor
  build-depends: base >= 4.7 && < 5
               , attoparsec
               , containers
               , aeson
               , linear >= 1.20.5
               , text
               , bytestring
               , time
               , http-client
               , http-media
               , random
               , servant
               , servant-client
               , fgl

executable wa-convert
  hs-source-dirs:      wa-convert
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall
  default-extensions:  OverloadedStrings
  build-depends: base >= 4.7 && < 5
               , origami
               , attoparsec
               , linear
               , bytestring

executable get-problems
  hs-source-dirs:      get-problems
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall
  build-depends: base >= 4.7 && < 5
               , origami
               , http-client
               , text
               , containers
               , transformers
               , directory
               , servant-client
               , aeson
               , bytestring

executable paper-folding
  hs-source-dirs:      paper-folding
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall -optl-Wl,-lglut
  default-extensions:  OverloadedStrings
  build-depends: base >= 4.7 && < 5
               , linear >= 1.20.5
               , origami
               , random
               , gloss
    
executable visualize
  hs-source-dirs:      visualize
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall -optl-Wl,-lglut
  default-extensions:  ViewPatterns
                     , OverloadedStrings
  build-depends: base >= 4.7 && < 5
               , origami
               , containers
               , gloss
               , linear
               , bytestring
               , attoparsec
